--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,16 @@
 
 .container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .row {
     display: flex;
+}
+
+.square {
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    height: 100%;
+    border: solid 1px olivedrab;
+    padding-top: 100%;
 }
