--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@
     padding: 0;
 }
 
-.container {
+.outer-container {
     display: flex;
+    justify-content: center;
+}
+
+.container {
+    width: 100%;
 }
 
 .row {
@@ -15,7 +20,6 @@
 .square {
     aspect-ratio: 1 / 1;
     width: 100%;
-    height: 100%;
     border: solid 1px olivedrab;
     padding-top: 100%;
 }
