--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,10 @@
 }
 
 button {
-
+    background-color: white;
+    height: 48px;
+    padding: 8px;
+    font-weight: 800;
 }
 
 .outer-container {
